5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1706_3051.log
== TEST (2019-04-29 18:13:07) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if (c <= 150):
	valor = (c * 0.60) + 5.00
	print (round(valor, 2))
elif (c > 150) or (c <= 250 ):
	valor = (c * 0.65) + 8.00
	print (round(valor, 2)
elif (c > 250) or (c <= 350):
	valor = (c * 0.70) + 12.00
	print (round(valor, 2))
else:
	valor = (c * 0.75) + 16.00
	print (round(valor, 2))
	
-- ERROR:
File "XXXX", line 8
    elif (c > 250) or (c <= 350):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:13:52) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if (c <= 150):
	valor = (c * 0.60) + 5.00
	print (round(valor, 2))
elif ((c > 150) or (c <= 250 ):
	valor = (c * 0.65) + 8.00
	print (round(valor, 2)
elif ((c > 250) or (c <= 350)):
	valor = (c * 0.70) + 12.00
	print (round(valor, 2))
else:
	valor = (c * 0.75) + 16.00
	print (round(valor, 2))
	
-- ERROR:
File "XXXX", line 5
    elif ((c > 150) or (c <= 250 ):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:15:10) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if ((c > 0) or (c <= 150)):
	valor = (c * 0.60) + 5.00
	print (round(valor, 2))
elif ((c > 150) or (c <= 250 ):
	valor = (c * 0.65) + 8.00
	print (round(valor, 2)
elif ((c > 250) or (c <= 350)):
	valor = (c * 0.70) + 12.00
	print (round(valor, 2))
else:
	valor = (c * 0.75) + 16.00
	print (round(valor, 2))
	
-- ERROR:
File "XXXX", line 5
    elif ((c > 150) or (c <= 250 ):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:16:38) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if ((c > 0) and (c <= 150)):
	valor = (c * 0.60) + 5.00
	print (round(valor, 2))
elif ((c > 150) and (c <= 250 ):
	valor = (c * 0.65) + 8.00
	print (round(valor, 2)
elif ((c > 250) and (c <= 350)):
	valor = (c * 0.70) + 12.00
	print (round(valor, 2))
else:
	valor = (c * 0.75) + 16.00
	print (round(valor, 2))
	
-- ERROR:
File "XXXX", line 5
    elif ((c > 150) and (c <= 250 ):
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:18:02) 
-- CODE:
c = int(input("escreva o valor do consumo de energia: "))
if ((c > 0) or (c <= 150)):
	valor = (c * 0.60) + 5.00
	print (round(valor, 2))
elif ((c > 150) or (c <= 250)):
	valor = (c * 0.65) + 8.00
	print (round(valor, 2)
elif ((c > 250) or (c <= 350)):
	valor = (c * 0.70) + 12.00
	print (round(valor, 2))
else:
	valor = (c * 0.75) + 16.00
	print (round(valor, 2))
	
-- ERROR:
File "XXXX", line 8
    elif ((c > 250) or (c <= 350)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:26:48) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if ((c >= 0) and (c <= 150)):
	valor = (c * 0.60) + 5.00
	print (round(valor, 2))
elif ((c > 150) and (c <= 250)):
	valor = (c * 0.65) + 8.00
	print (round(valor, 2)
elif ((c > 250) and (c <= 350)):
	valor = (c * 0.70) + 12.00
	print (round(valor, 2))
else:
	valor = (c * 0.75) + 16.00
	print (round(valor, 2))
	
-- ERROR:
File "XXXX", line 8
    elif ((c > 250) and (c <= 350)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:29:07) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if ((c >= 0) and (c <= 150)):
	valor = (c * 0.60) + 5
	print (round(valor, 2))
elif ((c > 150) and (c <= 250)):
	valor = (c * 0.65) + 8
	print (round(valor, 2)
elif ((c > 250) and (c <= 350)):
	valor = (c * 0.70) + 12
	print (round(valor, 2))
else:
	valor = (c * 0.75) + 16
	print (round(valor, 2))
	
-- ERROR:
File "XXXX", line 8
    elif ((c > 250) and (c <= 350)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:29:49) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if (c >= 0) and (c <= 150):
	valor = (c * 0.60) + 5
	print (round(valor, 2))
elif (c > 150) and (c <= 250):
	valor = (c * 0.65) + 8
	print (round(valor, 2)
elif (c > 250) and (c <= 350):
	valor = (c * 0.70) + 12
	print (round(valor, 2))
else:
	valor = (c * 0.75) + 16
	print (round(valor, 2))
	
-- ERROR:
File "XXXX", line 8
    elif (c > 250) and (c <= 350):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:30:33) 
-- CODE:
c = int(input("escreva o valor do consumo de energia: "))
if (c >= 0) and (c <= 150):
	valor = (c * 0.60) + 5
	print (round(valor, 2))
elif (c > 150) and (c <= 250):
	valor = (c * 0.65) + 8
	print (round(valor, 2)
elif (c > 250) and (c <= 350):
	valor = (c * 0.70) + 12
	print (round(valor, 2))
else:
	valor = (c * 0.75) + 16
	print (round(valor, 2))
	
-- ERROR:
File "XXXX", line 8
    elif (c > 250) and (c <= 350):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:36:50) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if (c < 150):
	valor = (c * 0.60) + 5
	print (round(valor, 2))
elif (c >= 150) and (c < 250):
	valor = (c * 0.65) + 8
	print (round(valor, 2)
elif (c >= 250) and (c < 350):
	valor = (c * 0.70) + 12
	print (round(valor, 2))
else:
	valor = (c * 0.75) + 16
	print (round(valor, 2))
	
-- ERROR:
File "XXXX", line 8
    elif (c >= 250) and (c < 350):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:37:29) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if (c < 150):
	valor = (c * 0.60) + 5
	print (round(valor, 2))
	elif (c >= 150) and (c < 250):
	valor = (c * 0.65) + 8
	print (round(valor, 2)
	elif (c >= 250) and (c < 350):
	valor = (c * 0.70) + 12
	print (round(valor, 2))
else:
	valor = (c * 0.75) + 16
	print (round(valor, 2))
	
-- ERROR:
File "XXXX", line 5
    elif (c >= 150) and (c < 250):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:38:35) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if (c <= 150):
	valor = (c * 0.60) + 5
	print (round(valor, 2))
elif (c > 150) and (c <= 250):
	valor = (c * 0.65) + 8
	print (round(valor, 2)
elif (c > 250) and (c <= 350):
	valor = (c * 0.70) + 12
	print (round(valor, 2))
else:
	valor = (c * 0.75) + 16
	print (round(valor, 2))
	
-- ERROR:
File "XXXX", line 8
    elif (c > 250) and (c <= 350):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:39:57) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if (c >=0) and (c <= 150):
	valor = (c * 0.60) + 5
	print (round(valor, 2))
elif (c > 150) and (c <= 250):
	valor = (c * 0.65) + 8
	print (round(valor, 2)
elif (c > 250) and (c <= 350):
	valor = (c * 0.70) + 12
	print (round(valor, 2))
else:
	valor = (c * 0.75) + 16
	print (round(valor, 2))
	
-- ERROR:
File "XXXX", line 8
    elif (c > 250) and (c <= 350):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:41:27) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if(c >= 0) and (c <= 150):
	valor = (c * 0.60) + 5
	print (round(valor, 2))
elif(c > 150) and (c <= 250):
	valor = (c * 0.65) + 8
	print (round(valor, 2)
elif(c > 250) and (c <= 350):
	valor = (c * 0.70) + 12
	print (round(valor, 2))
else:
	valor = (c * 0.75) + 16
	print (round(valor, 2))
	
-- ERROR:
File "XXXX", line 8
    elif(c > 250) and (c <= 350):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:42:25) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if(c >= 0) and (c <= 150):
	valor = (c * 0.60) + 5
	print (round(valor, 2))
elif(c > 150) and (c <= 250):
	valor = (c * 0.65) + 8
	print (round(valor, 2)
elif(c > 250) and (c <= 350):
	valor = (c * 0.70) + 12
	print (round(valor, 2))
else:
	valor = (c * 0.75) + 16
	print (round(valor, 2))
	
-- EXECUTION TIME:
0.25255
-- ERROR:
  File "/home/codebench/codes/1706/3051/main.py", line 8
    elif(c > 250) and (c <= 350):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:42:30) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if(c >= 0) and (c <= 150):
	valor = (c * 0.60) + 5
	print (round(valor, 2))
elif(c > 150) and (c <= 250):
	valor = (c * 0.65) + 8
	print (round(valor, 2)
elif(c > 250) and (c <= 350):
	valor = (c * 0.70) + 12
	print (round(valor, 2))
else:
	valor = (c * 0.75) + 16
	print (round(valor, 2))
	
-- ERROR:
File "XXXX", line 8
    elif(c > 250) and (c <= 350):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:43:04) 
-- CODE:
c = int(input("escreva o valor do consumo de energia: "))
if(c >= 0) and (c <= 150):
	valor = (c * 0.60) + 5
	print (round(valor, 2))
elif(c > 150) and (c <= 250):
	valor = (c * 0.65) + 8
	print (round(valor, 2)
elif(c > 250) and (c <= 350):
	valor = (c * 0.70) + 12
	print (round(valor, 2))
else:
	valor = (c * 0.75) + 16
	print (round(valor, 2))
	
-- ERROR:
File "XXXX", line 8
    elif(c > 250) and (c <= 350):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:46:37) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if (c > 0):
	if(c <= 150):
		valor = (c * 0.60) + 5
		print (round(valor, 2))
	elif(c > 150) and (c <= 250):
		valor = (c * 0.65) + 8
		print (round(valor, 2)
	elif(c > 250) and (c <= 350):
		valor = (c * 0.70) + 12
		print (round(valor, 2))
	else:
		valor = (c * 0.75) + 16
		print (round(valor, 2))
	
-- ERROR:
File "XXXX", line 9
    elif(c > 250) and (c <= 350):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:47:26) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if (c > 0):
	if(c <= 150):
		valor = (c * 0.60) + 5
		print (round(valor, 2))
	elif(c > 150) and (c <= 250):
		valor = (c * 0.65) + 8
		print (round(valor, 2)
	elif(c > 250) and (c <= 350):
		valor = (c * 0.70) + 12
		print (round(valor, 2))
else:
	valor = (c * 0.75) + 16
	print (round(valor, 2))
	
-- ERROR:
File "XXXX", line 9
    elif(c > 250) and (c <= 350):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:47:57) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if (c >= 0):
	if(c <= 150):
		valor = (c * 0.60) + 5
		print (round(valor, 2))
	elif(c > 150) and (c <= 250):
		valor = (c * 0.65) + 8
		print (round(valor, 2)
	elif(c > 250) and (c <= 350):
		valor = (c * 0.70) + 12
		print (round(valor, 2))
else:
	valor = (c * 0.75) + 16
	print (round(valor, 2))
	
-- ERROR:
File "XXXX", line 9
    elif(c > 250) and (c <= 350):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:49:03) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if (c >= 0):
	if(c <= 150):
		valor = (c * 0.60) + 5
		print (round(valor, 2))
	elif(c > 150) and (c <= 250):
		valor = (c * 0.65) + 8
		print (round(valor, 2)
	elif(c > 250) and (c <= 350):
		valor = (c * 0.70) + 12
		print (round(valor, 2))
	else:
		valor = (c * 0.75) + 16
		print (round(valor, 2))
else:
	print ("invalido")
	
-- ERROR:
File "XXXX", line 9
    elif(c > 250) and (c <= 350):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:49:50) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if(c <= 150):
	valor = (c * 0.60) + 5
	print (round(valor, 2))
elif(c > 150) and (c <= 250):
	valor = (c * 0.65) + 8
	print (round(valor, 2)
elif(c > 250) and (c <= 350):
	valor = (c * 0.70) + 12
	print (round(valor, 2))
else:
		valor = (c * 0.75) + 16
		print (round(valor, 2))

	
-- ERROR:
File "XXXX", line 8
    elif(c > 250) and (c <= 350):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:51:52) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if((c <= 150)):
	valor = (c * 0.60) + 5
	print (round(valor, 2))
elif((c > 150) and (c <= 250)):
	valor = (c * 0.65) + 8
	print (round(valor, 2)
elif((c > 250) and (c <= 350)):
	valor = (c * 0.70) + 12
	print (round(valor, 2))
else:
		valor = (c * 0.75) + 16
		print (round(valor, 2))

	
-- EXECUTION TIME:
0.192543
-- ERROR:
  File "/home/codebench/codes/1706/3051/main.py", line 8
    elif((c > 250) and (c <= 350)):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:51:54) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if((c <= 150)):
	valor = (c * 0.60) + 5
	print (round(valor, 2))
elif((c > 150) and (c <= 250)):
	valor = (c * 0.65) + 8
	print (round(valor, 2)
elif((c > 250) and (c <= 350)):
	valor = (c * 0.70) + 12
	print (round(valor, 2))
else:
		valor = (c * 0.75) + 16
		print (round(valor, 2))

	
-- ERROR:
File "XXXX", line 8
    elif((c > 250) and (c <= 350)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:52:35) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if((c <= 150)):
	valor = (c * 0.60) + 5
	print (round(valor, 2))
	elif((c > 150) and (c <= 250)):
	valor = (c * 0.65) + 8
	print (round(valor, 2)
  elif((c > 250) and (c <= 350)):
	valor = (c * 0.70) + 12
	print (round(valor, 2))
  else:
		valor = (c * 0.75) + 16
		print (round(valor, 2))

	
-- ERROR:
File "XXXX", line 5
    elif((c > 150) and (c <= 250)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:53:24) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if((c <= 150)):
valor = (c * 0.60) + 5
	print (round(valor, 2))
elif((c > 150) and (c <= 250)):
valor = (c * 0.65) + 8
	print (round(valor, 2)
elif((c > 250) and (c <= 350)):
valor = (c * 0.70) + 12
	print (round(valor, 2))
else:
valor = (c * 0.75) + 16
	print (round(valor, 2))

	
-- ERROR:
File "XXXX", line 3
    valor = (c * 0.60) + 5
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:53:47) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if((c <= 150)):
	valor = (c * 0.60) + 5
	print (round(valor, 2))
elif((c > 150) and (c <= 250)):
	valor = (c * 0.65) + 8
	print (round(valor, 2)
elif((c > 250) and (c <= 350)):
	valor = (c * 0.70) + 12
	print (round(valor, 2))
else:
	valor = (c * 0.75) + 16
	print (round(valor, 2))

	
-- ERROR:
File "XXXX", line 8
    elif((c > 250) and (c <= 350)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:54:13) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if((c <= 150.0)):
	valor = (c * 0.60) + 5
	print (round(valor, 2))
elif((c > 150.0) and (c <= 250.0)):
	valor = (c * 0.65) + 8
	print (round(valor, 2)
elif((c > 250.0) and (c <= 350.0)):
	valor = (c * 0.70) + 12
	print (round(valor, 2))
else:
	valor = (c * 0.75) + 16
	print (round(valor, 2))

	
-- ERROR:
File "XXXX", line 8
    elif((c > 250.0) and (c <= 350.0)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:54:45) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if((c <= 150)):
	valor = (c * 0.60) + 5
	print (round(valor, 2))
elif((c >150) and (c <=250)):
	valor = (c * 0.65) + 8
	print (round(valor, 2)
elif((c >250) and (c <=350)):
	valor = (c * 0.70) + 12
	print (round(valor, 2))
else:
	valor = (c * 0.75) + 16
	print (round(valor, 2))

	
-- EXECUTION TIME:
0.205602
-- ERROR:
  File "/home/codebench/codes/1706/3051/main.py", line 8
    elif((c >250) and (c <=350)):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:54:48) 
-- CODE:
c = float(input("escreva o valor do consumo de energia: "))
if((c <= 150)):
	valor = (c * 0.60) + 5
	print (round(valor, 2))
elif((c >150) and (c <=250)):
	valor = (c * 0.65) + 8
	print (round(valor, 2)
elif((c >250) and (c <=350)):
	valor = (c * 0.70) + 12
	print (round(valor, 2))
else:
	valor = (c * 0.75) + 16
	print (round(valor, 2))

	
-- ERROR:
File "XXXX", line 8
    elif((c >250) and (c <=350)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
